update für 2 mg